# XOXDrums

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  XOX Drums User Manual.md  plugin-mm.json  plugin.json
.github/workflows/: build-metamodule-plugins.yml  build_vcv_plugin.yml
doc/: CoreModule-template.md  XOX Drums User Manual.md
scripts/: createinfo.py
src/: plugin-mm.cc  plugin-vcv.cc
src/helpers/: param_cv.hh
src/modules/: Accent.hh  Clap.hh  Clave.hh  Congabongo.hh  Cowbell.hh  Duck.hh  HiHat.hh  Kick.hh  Maraca.hh  Rimshot.hh  Snare.hh  Tom.hh
src/modules/core/: Accent.hh  Biquad.hh  Clap.hh  Clave.hh  Congabongo.hh  Cowbell.hh  DrumBase.hh  Duck.hh  HiHat.hh  Kick.hh  Maraca.hh  Rimshot.hh  Snare.hh  Tom.hh
src/modules/info/: Accent_info.hh  Clap_info.hh  Clave_info.hh  Congabongo_info.hh  Cowbell_info.hh  Duck_info.hh  HiHat_info.hh  Kick_info.hh  Maraca_info.hh  Rimshot_info.hh  Snare_info.hh  Tom_info.hh
src/vcv/widgets/: base_modules_implemenation.hh
